--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c0edeb">  <td>19/01/24 09:36:26</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@35cabb2a]">&gt;&gt;setUp</td> 
+<tr bgcolor="c0edeb">  <td>19/01/28 12:30:29</td>   <td>0</td> <td title="&gt;&gt;Base.setUp()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead_QuickView@35cabb2a]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>19/01/24 09:36:26</td>   <td>80</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddLead.LeadCreation()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead@35cabb2a]">LeadCreation</td> 
+<tr bgcolor="6dabbc">  <td>19/01/28 12:30:39</td>   <td>9716</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_AddLead_QuickView.LeadCreationQuickView()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead_QuickView@35cabb2a]">LeadCreationQuickView</td> 
   <td>main@807657332</td>   <td></td> </tr>
+<tr bgcolor="c0edeb">  <td>19/01/28 12:31:10</td>   <td>40479</td> <td title="&lt;&lt;Base.TearDown()[pri:0, instance:com.ConvergeHub.TestCases.TC_AddLead_QuickView@35cabb2a]">&lt;&lt;TearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@807657332</td>   <td></td> </tr>
 </table>
